
MKS:
----------------------
* Support archive filenames with spaces (CC-376). Patch by Martin Aberle.

NavigationTag:
----------------------
* Remove support for log files timestamped without a second part

P4ChangelistLabelIncrementer:
----------------------
* New label incrementer for use with a Perforce changelist (CC-379). Patch by Matt Albrecht

Project:
----------------------
* Remove methods to get/set config file from Project and corresponding jmx interface classes
* ModificationSet is no longer a required element; when missing builds must be forced.
* Fix a testcase failure on MacOS X. Reported by Michael Kloss.
* Build after failed was not getting set properly. Patch by Brad Clarke.
* Fix a bug where projects would hang if a build failed with unchecked exceptions or errors.

ProjectConfig:
----------------------
* Validates subelements by calling their "validate()" methods.

Schedule:
----------------------
* Fix getTimeToNextBuild to adjust for daylight savings time (CC-104).

SfeeFrsPublisher:
----------------------
* A new publisher for uploading files to a SourceForge Enterprise Edition's File Release System.

SfeeTrackerPublisher:
----------------------
* A new publisher for creating a tracker artifact in a SourceForge Enterprise Edition project.
* Extracted XPathAwareChild and NamedXPathAwareChild to make usable by other plugins.

SfeeDocumentManagerPublisher:
----------------------
* A new publisher for creating a Document Manager entry in a SourceForge Enterprise Edition project.
* If a Document Manager entry already exists in the specified folder with the same name, then the document being published will be added as a new version.

StarTeam
----------------------
* Logging is unclear in a multi-threaded environment, so prepend 'url' string to all log messages. (CC-368) Patch by Benjamin Burgess