@@ -3455,6 +3455,11 @@ password=P@ssW0rd!
                <td>No</td>
                <td>Unsupported!</td>
             </tr>
+            <tr>
+                <td>usep4email</td>
+                 <td>No</td>
+                 <td>Should the Email address for the users be retrieved from Perforce if possible.  Defaults to true.</td>
+             </tr>
             </tbody>
         </table>
         </div>
