@@ -131,6 +131,10 @@ P4ChangelistLabelIncrementer:
 ----------------------
 * New label incrementer for use with a Perforce changelist (CC-379). Patch by Matt Albrecht
 
+P4:
+----------------------
+* Get the email address of users from Perforce (CC-381). Patch by John Lussmyer.
+
 Project:
 ----------------------
 * Remove methods to get/set config file from Project and corresponding jmx interface classes
